name:                Server
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Will Yager
maintainer:          will.yager@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable Server
  main-is:             Server.hs
  ghc-options:         -O2 -Wall -Werror -threaded -with-rtsopts=-N
  default-extensions:  OverloadedLists, OverloadedStrings, DataKinds, TypeOperators, MultiParamTypeClasses, FlexibleContexts, LambdaCase, ScopedTypeVariables, RecordWildCards, NoMonomorphismRestriction, TypeApplications, BangPatterns, DeriveFunctor
  build-depends:       base,
                       servant,
                       servant-server,
                       servant-blaze,
                       blaze-html,
                       blaze-markup,
                       warp,
                       optparse-applicative,
                       filepath,
                       wai-app-static,
                       warp-tls,
                       async
  default-language:    Haskell2010

